# zotkit

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  README.zh-CN.md  conventions.example.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: integration.yml  publish.yml
docs/: organizing-with-agents.md  webdav-format.md  zotero-plugin-integration.md
docs/adr/: 0001-zotkit-family-monorepo.md
docs/superpowers/plans/: 2026-07-23-cli-activity-copy-note-longpdf.md  (+3 more)
skills/zotkit/: SKILL.md
zotero-plugin/: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  bootstrap.js  manifest.json  package-lock.json  package.json  prefs.js  tsconfig.json  vitest.config.ts
zotero-plugin/native/: Makefile  README.md
zotero-plugin/scripts/: build.mjs
zotero-plugin/src/: assets.d.ts  codex-app-server.ts  codex-service.ts  exchanges.ts  float-panel.ts  globals.d.ts  index.ts  markdown.ts  native-bridge.ts  native-session-socket.ts  note-sync.ts  platform.ts  plugin.ts  protocol.ts  reader-context.ts  settings.ts  sidebar.ts  styles.css  terminal-panel.ts  zotero-mutations.ts
zotero-plugin/test/: build-assets.test.ts  codex-app-server.test.ts  codex-service.test.ts  exchanges.test.ts  float-panel.test.ts  markdown.test.ts  native-bridge.test.ts  native-session-socket.test.ts  note-sync.test.ts  platform.test.ts  plugin-state.test.ts  reader-context.test.ts  runtime-compat.test.ts  setup-dom.ts  sidebar.test.ts  terminal-panel.test.ts  zotero-mutations.test.ts
zotkit/: __init__.py  cli.py  core.py
(+8 files in other folders)
